--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "type": "git",
     "url": "https://github.com/TruthMines/truthmines-web.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "angular2": "2.0.0-beta.8",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "systemjs": "0.19.22",
+    "zone.js": "0.5.15"
+  },
   "devDependencies": {
-    "bower": "^1.3.12",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-connect": "^0.9.0",
@@ -19,14 +26,17 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-wiredep": "^1.9.0",
+    "grunt-ts": "^5.3.2",
     "load-grunt-tasks": "^1.0.0",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+    "typescript": "^1.8.2",
+    "typings":"^0.6.8"
   },
   "bugs": {
     "url": "https://github.com/TruthMines/truthmines-web/issues"
   },
   "scripts": {
+    "postinstall": "typings install",
     "test": "grunt test"
   },
   "private": true
